# Pooh-code

./: .gitignore  README.md  pyproject.toml
066fd960a8b2/farm-game/: index.html  script.js  style.css
894482dc1dc6/: index.html  script.js  styles.css
fb3fccbe7daa/: README.md  index.html  script.js  style.css
src/di_code/: __init__.py  agent.py  config.py  context.py  file_processing.py  main.py  output_files.py  paths.py  qwen_client.py  session_store.py  time_utils.py  tooling.py
src/di_code/channels/: __init__.py  base.py  cli.py  feishu_ws.py
src/frontend/: __init__.py  server.py
src/frontend/static/: app.js  index.html  login.html  markdown-worker.js  style.css
src/pooh_code/: __init__.py  agent.py  auth_db.py  commands.py  config.py  context.py  file_processing.py  image_generation.py  lane.py  main.py  models.py  openai_codex.py  output_files.py  qwen_client.py  session_store.py  skills.py  subagent.py  tooling.py
src/pooh_code/channels/: __init__.py  cli.py  feishu_ws.py
test1/: test.py
test2/: test2.py
tests/: test_search.py
workplace/runtime/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
workplace/runtime/skills/byd-patent-claim-chart/: SKILL.md
workplace/runtime/skills/byd-patent-claim-chart-internal/: SKILL.md
workplace/runtime/skills/byd-patent-claim-chart-internal/references/: data-sources.md  workflow.md
workplace/runtime/skills/byd-patent-claim-chart-internal/scripts/: fetch_autohome_series_params.py  fetch_dawei_patent_claims.py
workplace/runtime/skills/byd-patent-claim-chart/assets/: byd_patent_claim_chart_template.xlsx
workplace/runtime/skills/docx-create/: SKILL.md
workplace/runtime/skills/frontend-design/: SKILL.md
workplace/runtime/skills/github-push/: SKILL.md
workplace/runtime/skills/hce-diagnose/: SKILL.md
workplace/runtime/skills/huashu-design/: package-lock.json
workplace/runtime/skills/paper-research/: SKILL.md
workplace/runtime/skills/pptx-create/: SKILL.md
workplace/runtime/skills/project-bootstrap/: SKILL.md
workplace/runtime/skills/skill-creator/: SKILL.md
workplace/runtime/skills/skill-install-review/: SKILL.md
workplace/runtime/skills/ui-ux-pro-max/: SKILL.md
workplace/runtime/skills/xlsx-create/: SKILL.md
(+4 files in other folders)
