[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "di-code"
version = "0.1.0"
description = "Python reimplementation of the core Claude Code workflow with Qwen and Feishu WS access."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "lark-oapi>=1.5.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "requests>=2.33.1",
]

[project.scripts]
di-code = "di_code.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/di_code"]
